gwr-config/tests/macro_properties/unsupported.stderr
error: unsupported property
 --> tests/macro_properties/unsupported.rs:5:23
  |
5 | #[multi_source_config(path = "foo.toml")]
  |                       ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/macro_properties/unsupported.rs:11:2
   |
11 | }
   |  ^ consider adding a `main` function to `$DIR/tests/macro_properties/unsupported.rs`
